htsjdk update; rm use of deprecated apis